--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 358,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
-    "BASE_URL = 'http://127.0.0.1:5000'\n"
+    "BASE_URL = 'http://127.0.0.1:5000'\n",
+    "# BASE_URL = 'http://192.168.0.3:5500'\n"
    ]
   },
   {
@@ -19,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 359,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +29,7 @@
        "b'<p>Hello, World!</p>'"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 359,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +52,7 @@
        "b'<p>Hello, World!</p>'"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 278,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 279,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [
     {
@@ -100,10 +101,10 @@
      "output_type": "stream",
      "text": [
       "token:\n",
-      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MjQyNjgyMSwianRpIjoiYjFjOTI4NjgtNDk3OS00MTkxLTliZGMtNmRlZDc1N2M0ZDQ1IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYyNDI2ODIxLCJleHAiOjE2NjI0NzAwMjF9.PtujJdD_mCiQjXN06ypz8KzlI0kAt_UEqrNGDguQujA\n",
+      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MzA1MTE2MiwianRpIjoiMDRkOGJlNGQtZWZhMC00OGUwLThhMTItNWZhOTRhMzY0MTQzIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYzMDUxMTYyLCJleHAiOjE2NjMwOTQzNjJ9.uyINtcwk4trbcelgn9HYWsZTgDNiIb-8I9-lDxohrgc\n",
       "\n",
       "cookie:\n",
-      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MjQyNjgyMSwianRpIjoiYjFjOTI4NjgtNDk3OS00MTkxLTliZGMtNmRlZDc1N2M0ZDQ1IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYyNDI2ODIxLCJleHAiOjE2NjI0NzAwMjF9.PtujJdD_mCiQjXN06ypz8KzlI0kAt_UEqrNGDguQujA'}\n"
+      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MzA1MTE2MiwianRpIjoiMDRkOGJlNGQtZWZhMC00OGUwLThhMTItNWZhOTRhMzY0MTQzIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYzMDUxMTYyLCJleHAiOjE2NjMwOTQzNjJ9.uyINtcwk4trbcelgn9HYWsZTgDNiIb-8I9-lDxohrgc'}\n"
      ]
     }
    ],
@@ -123,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 282,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 283,
    "metadata": {},
    "outputs": [
     {
@@ -197,14 +198,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 284,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'project_names': ['project_1']}\n"
+      "{'project_names': ['test_project']}\n"
      ]
     }
    ],
@@ -216,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 285,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 287,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 292,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 293,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 294,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 295,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 296,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 297,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 298,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 299,
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 300,
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 301,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 302,
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 303,
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 304,
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 305,
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 306,
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 307,
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 308,
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 309,
    "metadata": {},
    "outputs": [
     {
@@ -794,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 310,
    "metadata": {},
    "outputs": [
     {
@@ -818,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 311,
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 312,
    "metadata": {},
    "outputs": [
     {
@@ -868,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 313,
    "metadata": {},
    "outputs": [
     {
@@ -898,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 314,
    "metadata": {},
    "outputs": [
     {
@@ -919,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 315,
    "metadata": {},
    "outputs": [
     {
@@ -946,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 316,
    "metadata": {},
    "outputs": [
     {
@@ -967,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 317,
    "metadata": {},
    "outputs": [
     {
@@ -991,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 318,
    "metadata": {},
    "outputs": [
     {
@@ -1011,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 319,
    "metadata": {},
    "outputs": [
     {
@@ -1085,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 320,
    "metadata": {},
    "outputs": [
     {
@@ -1201,7 +1202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 321,
    "metadata": {},
    "outputs": [
     {
@@ -1222,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 322,
    "metadata": {},
    "outputs": [
     {
@@ -1249,7 +1250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 323,
    "metadata": {},
    "outputs": [
     {
@@ -1270,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 324,
    "metadata": {},
    "outputs": [
     {
@@ -1295,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 325,
    "metadata": {},
    "outputs": [
     {
@@ -1315,7 +1316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 326,
    "metadata": {},
    "outputs": [
     {
@@ -1388,7 +1389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 327,
    "metadata": {},
    "outputs": [
     {
@@ -1463,7 +1464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 328,
    "metadata": {},
    "outputs": [
     {
@@ -1484,7 +1485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 329,
    "metadata": {},
    "outputs": [
     {
@@ -1511,7 +1512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 330,
    "metadata": {},
    "outputs": [
     {
@@ -1539,7 +1540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 331,
    "metadata": {},
    "outputs": [
     {
@@ -1560,7 +1561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 332,
    "metadata": {},
    "outputs": [
     {
@@ -1584,7 +1585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 333,
    "metadata": {},
    "outputs": [
     {
@@ -1604,7 +1605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 334,
    "metadata": {},
    "outputs": [
     {
@@ -1626,7 +1627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 335,
    "metadata": {},
    "outputs": [
     {
@@ -1648,7 +1649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 336,
    "metadata": {},
    "outputs": [
     {
@@ -1669,7 +1670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 337,
    "metadata": {},
    "outputs": [
     {
@@ -1696,37 +1697,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 338,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\n",
-      "  \"rasa_status_code\": 200\n",
-      "}\n",
+      "{\"rasa_status_code\":200}\n",
       "\n"
      ]
     }
    ],
    "source": [
     "\"\"\"Train a model\"\"\"\n",
-    "r_get = requests.get(url=f'{BASE_URL}/projects/project_1/models',\n",
+    "r_get = requests.get(url=f'{BASE_URL}/projects/test_project/models',\n",
     "                     cookies=cookies)\n",
     "print(r_get.text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 339,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Error message': \"HTTPConnectionPool(host='localhost', port=5005): Max retries exceeded with url: /model (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x000002152AEE59F0>: Failed to establish a new connection: [WinError 10061] 無法連線，因為目標電腦拒絕連線。'))\"}\n"
+      "{'Error message': \"HTTPConnectionPool(host='localhost', port=5005): Max retries exceeded with url: /model (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7fb43b5e70>: Failed to establish a new connection: [Errno 111] Connection refused'))\"}\n"
      ]
     }
    ],
@@ -1747,7 +1746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 340,
    "metadata": {},
    "outputs": [
     {
@@ -1765,6 +1764,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 341,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "breakpoint",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\DevilHYT\\Desktop\\github\\wingman-api\\test\\test.ipynb Cell 80\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/DevilHYT/Desktop/github/wingman-api/test/test.ipynb#Y325sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39massert\u001b[39;00m \u001b[39mFalse\u001b[39;00m, \u001b[39m\"\u001b[39m\u001b[39mbreakpoint\u001b[39m\u001b[39m\"\u001b[39m\n",
+      "\u001b[1;31mAssertionError\u001b[0m: breakpoint"
+     ]
+    }
+   ],
+   "source": [
+    "assert False, \"breakpoint\""
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1773,7 +1793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1789,7 +1809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1902,70 +1922,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'nlu': [{'intent': 'tsmc',\n",
-      "          'examples': [{'text': '[台積電]{\"entity\": \"company\"}在[美國]{\"entity\": '\n",
-      "                                '\"country\"}《財富》雜誌評選「全球最大500家公司」排行榜中，依營收規模名列全球第[251]{\"entity\": '\n",
-      "                                '\"rank\"}名\\n'},\n",
-      "                       {'text': '[台積電]{\"entity\": \"company\"}在[美國]{\"entity\": '\n",
-      "                                '\"country\"}《財富》雜誌評選「全球最大500家公司」排行榜中，依營收規模名列全球第[251]{\"entity\": '\n",
-      "                                '\"rank\"}名\\n'}]},\n",
-      "         {'intent': 'tsmc2',\n",
-      "          'examples': [{'text': '[台積電]{\"entity\": \"company\"}在[美國]{\"entity\": '\n",
-      "                                '\"country\"}《財富》雜誌評選「全球最大500家公司」排行榜中，依營收規模名列全球第[251]{\"entity\": '\n",
-      "                                '\"rank\"}名\\n'}]}]}\n",
-      "------------------------------------------------------------------------------------------------------------\n",
-      "nlu:\n",
-      "- intent: tsmc\n",
-      "  examples:\n",
-      "  - text: |\n",
-      "      [台積電]{\"entity\": \"company\"}在[美國]{\"entity\": \"country\"}《財富》雜誌評選「全球最大500家公司」排行榜中，依營收規模名列全球第[251]{\"entity\": \"rank\"}名\n",
-      "  - text: |\n",
-      "      [台積電]{\"entity\": \"company\"}在[美國]{\"entity\": \"country\"}《財富》雜誌評選「全球最大500家公司」排行榜中，依營收規模名列全球第[251]{\"entity\": \"rank\"}名\n",
-      "- intent: tsmc2\n",
-      "  examples:\n",
-      "  - text: |\n",
-      "      [台積電]{\"entity\": \"company\"}在[美國]{\"entity\": \"country\"}《財富》雜誌評選「全球最大500家公司」排行榜中，依營收規模名列全球第[251]{\"entity\": \"rank\"}名\n",
-      "------------------------------------------------------------------------------------------------------------\n",
-      "{'intents': ['tsmc', {'tsmc2': {'use_entities': ['entity_1', 'entity_2']}}],\n",
-      " 'entities': [{'test': {'roles': ['role_1', 'role_2']}},\n",
-      "              {'company': {'roles': ['role_1', 'role_2'],\n",
-      "                           'groups': ['group_1', 'group_2']}},\n",
-      "              {'rank': {'groups': ['group_1', 'group_2']}},\n",
-      "              'country']}\n",
-      "------------------------------------------------------------------------------------------------------------\n",
-      "intents:\n",
-      "- tsmc\n",
-      "- tsmc2:\n",
-      "    use_entities:\n",
-      "    - entity_1\n",
-      "    - entity_2\n",
-      "entities:\n",
-      "- test:\n",
-      "    roles:\n",
-      "    - role_1\n",
-      "    - role_2\n",
-      "- company:\n",
-      "    roles:\n",
-      "    - role_1\n",
-      "    - role_2\n",
-      "    groups:\n",
-      "    - group_1\n",
-      "    - group_2\n",
-      "- rank:\n",
-      "    groups:\n",
-      "    - group_1\n",
-      "    - group_2\n",
-      "- country\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "from ruamel.yaml import YAML\n",
