--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -7,8 +7,9 @@
    "outputs": [],
    "source": [
     "import requests\n",
-    "BASE_URL = 'http://127.0.0.1:5000'\n",
-    "# BASE_URL = 'http://192.168.0.3:5500'\n"
+    "# BASE_URL = 'http://127.0.0.1:5000'\n",
+    "# BASE_URL = 'http://192.168.0.3:5500'\n",
+    "BASE_URL = 'http://asar.lisontech.net'\n"
    ]
   },
   {
