--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
        "b'<p>Hello, World!</p>'"
       ]
      },
-     "execution_count": 359,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
        "b'<p>Hello, World!</p>'"
       ]
      },
-     "execution_count": 278,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -102,10 +102,10 @@
      "output_type": "stream",
      "text": [
       "token:\n",
-      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MzA1MTE2MiwianRpIjoiMDRkOGJlNGQtZWZhMC00OGUwLThhMTItNWZhOTRhMzY0MTQzIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYzMDUxMTYyLCJleHAiOjE2NjMwOTQzNjJ9.uyINtcwk4trbcelgn9HYWsZTgDNiIb-8I9-lDxohrgc\n",
+      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MzYyMTUyOSwianRpIjoiMjkwY2JhY2EtZTk4MS00MTIzLTkyOTAtYzkyMDdmNzdkODg5IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYzNjIxNTI5LCJleHAiOjE2NjM2NjQ3Mjl9.-pXp3bMO-64RWIhxTexpUxSAADunCegzdqNGHDXnH48\n",
       "\n",
       "cookie:\n",
-      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MzA1MTE2MiwianRpIjoiMDRkOGJlNGQtZWZhMC00OGUwLThhMTItNWZhOTRhMzY0MTQzIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYzMDUxMTYyLCJleHAiOjE2NjMwOTQzNjJ9.uyINtcwk4trbcelgn9HYWsZTgDNiIb-8I9-lDxohrgc'}\n"
+      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MzYyMTUyOSwianRpIjoiMjkwY2JhY2EtZTk4MS00MTIzLTkyOTAtYzkyMDdmNzdkODg5IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYzNjIxNTI5LCJleHAiOjE2NjM2NjQ3Mjl9.-pXp3bMO-64RWIhxTexpUxSAADunCegzdqNGHDXnH48'}\n"
      ]
     }
    ],
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -199,14 +199,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'project_names': ['test_project']}\n"
+      "{'project_names': ['project_1', 'test_project']}\n"
      ]
     }
    ],
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -840,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -900,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -921,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -948,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -969,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -993,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1013,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1087,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1203,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1224,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1251,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1272,7 +1272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1297,7 +1297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1317,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1390,7 +1390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1465,7 +1465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1486,7 +1486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1513,7 +1513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1541,7 +1541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1562,7 +1562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1586,7 +1586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1606,7 +1606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1628,7 +1628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1650,7 +1650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1671,7 +1671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1698,7 +1698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1719,14 +1719,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Error message': \"HTTPConnectionPool(host='localhost', port=5005): Max retries exceeded with url: /model (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7fb43b5e70>: Failed to establish a new connection: [Errno 111] Connection refused'))\"}\n"
+      "{'Error message': \"HTTPConnectionPool(host='localhost', port=5005): Max retries exceeded with url: /model (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7f7644e9e0>: Failed to establish a new connection: [Errno 111] Connection refused'))\"}\n"
      ]
     }
    ],
@@ -1747,7 +1747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1766,7 +1766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1776,7 +1776,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\DevilHYT\\Desktop\\github\\wingman-api\\test\\test.ipynb Cell 80\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/DevilHYT/Desktop/github/wingman-api/test/test.ipynb#Y325sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39massert\u001b[39;00m \u001b[39mFalse\u001b[39;00m, \u001b[39m\"\u001b[39m\u001b[39mbreakpoint\u001b[39m\u001b[39m\"\u001b[39m\n",
+      "\u001b[1;32mc:\\Users\\DevilHYT\\Desktop\\github\\asar-api\\test\\test.ipynb Cell 80\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/DevilHYT/Desktop/github/asar-api/test/test.ipynb#Y142sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39massert\u001b[39;00m \u001b[39mFalse\u001b[39;00m, \u001b[39m\"\u001b[39m\u001b[39mbreakpoint\u001b[39m\u001b[39m\"\u001b[39m\n",
       "\u001b[1;31mAssertionError\u001b[0m: breakpoint"
      ]
     }
