--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
        "b'<p>Hello, World!</p>'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -102,10 +102,10 @@
      "output_type": "stream",
      "text": [
       "token:\n",
-      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MzYyMTUyOSwianRpIjoiMjkwY2JhY2EtZTk4MS00MTIzLTkyOTAtYzkyMDdmNzdkODg5IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYzNjIxNTI5LCJleHAiOjE2NjM2NjQ3Mjl9.-pXp3bMO-64RWIhxTexpUxSAADunCegzdqNGHDXnH48\n",
+      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2Mzc5NDM3OSwianRpIjoiNTQ0Nzk3MWEtZjEyYi00ODJlLWE0M2EtYzRjZDdkMDc0MTdiIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYzNzk0Mzc5LCJleHAiOjE2NjM4Mzc1Nzl9.9E9U7dxjB4Et4h19LBCaOEi3rEVfQRVzdpncCxfu6yo\n",
       "\n",
       "cookie:\n",
-      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MzYyMTUyOSwianRpIjoiMjkwY2JhY2EtZTk4MS00MTIzLTkyOTAtYzkyMDdmNzdkODg5IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYzNjIxNTI5LCJleHAiOjE2NjM2NjQ3Mjl9.-pXp3bMO-64RWIhxTexpUxSAADunCegzdqNGHDXnH48'}\n"
+      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2Mzc5NDM3OSwianRpIjoiNTQ0Nzk3MWEtZjEyYi00ODJlLWE0M2EtYzRjZDdkMDc0MTdiIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYzNzk0Mzc5LCJleHAiOjE2NjM4Mzc1Nzl9.9E9U7dxjB4Et4h19LBCaOEi3rEVfQRVzdpncCxfu6yo'}\n"
      ]
     }
    ],
@@ -167,6 +167,53 @@
     "\"\"\"Logout\"\"\"\n",
     "r_del = requests.delete(url=f'{BASE_URL}/auth', cookies=cookies)\n",
     "print(r_del.json())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# GConfig API"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'credentials': {'rest': None, 'rasa': {'url': 'http://localhost:5002/api'}, 'telegram': None, 'facebook': None}, 'endpoints': {'action_endpoint': {'url': 'http://rasa-action:5055/webhook'}}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"get global config\"\"\"\n",
+    "r_get = requests.get(url=f'{BASE_URL}/gconfig', cookies=cookies)\n",
+    "print(r_get.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'msg': 'OK'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"update global config\"\"\"\n",
+    "r_put = requests.put(url=f'{BASE_URL}/gconfig',\n",
+    "                     cookies=cookies,\n",
+    "                     json={'credentials': {'rest': None, 'rasa': {'url': 'http://localhost:5002/api'}, 'telegram': None, 'facebook': None}, 'endpoints': {'action_endpoint': {'url': 'http://rasa-action:5055/webhook'}}})\n",
+    "print(r_put.json())\n"
    ]
   },
   {
@@ -1986,7 +2033,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('flask')",
+   "display_name": "Python 3.10.7 64-bit ('venv')",
    "language": "python",
    "name": "python3"
   },
@@ -2000,12 +2047,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "0eb48245f6d77da98f7d2bbfee7eae70c4f6ccfbd5806a07f9206030d00440a7"
+    "hash": "d5a93f04303b4b3c5a779331b74705a9d4021afccf2f818a1bfe8f9513487345"
    }
   }
  },
