--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -102,10 +102,10 @@
      "output_type": "stream",
      "text": [
       "token:\n",
-      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2Mzc5NDM3OSwianRpIjoiNTQ0Nzk3MWEtZjEyYi00ODJlLWE0M2EtYzRjZDdkMDc0MTdiIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYzNzk0Mzc5LCJleHAiOjE2NjM4Mzc1Nzl9.9E9U7dxjB4Et4h19LBCaOEi3rEVfQRVzdpncCxfu6yo\n",
+      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MzgwNzgwMiwianRpIjoiOTdkYzVmN2MtNzE3NC00ZmYxLWIxNTctODk0NzU4MjBjYzVkIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYzODA3ODAyLCJleHAiOjE2NjM4NTEwMDJ9.pxQjveaqjXE2BExaLaPg3WnUph7YfS0WMtVNe_6-tao\n",
       "\n",
       "cookie:\n",
-      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2Mzc5NDM3OSwianRpIjoiNTQ0Nzk3MWEtZjEyYi00ODJlLWE0M2EtYzRjZDdkMDc0MTdiIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYzNzk0Mzc5LCJleHAiOjE2NjM4Mzc1Nzl9.9E9U7dxjB4Et4h19LBCaOEi3rEVfQRVzdpncCxfu6yo'}\n"
+      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MzgwNzgwMiwianRpIjoiOTdkYzVmN2MtNzE3NC00ZmYxLWIxNTctODk0NzU4MjBjYzVkIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYzODA3ODAyLCJleHAiOjE2NjM4NTEwMDJ9.pxQjveaqjXE2BExaLaPg3WnUph7YfS0WMtVNe_6-tao'}\n"
      ]
     }
    ],
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -329,6 +329,108 @@
     "                       cookies=cookies, \n",
     "                       json={'project_name': 'test_project'})\n",
     "print(r_post.json())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# LConfig API"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# The config recipe.\n",
+      "# https://rasa.com/docs/rasa/model-configuration/\n",
+      "recipe: default.v1\n",
+      "\n",
+      "# Configuration for Rasa NLU.\n",
+      "# https://rasa.com/docs/rasa/nlu/components/\n",
+      "language: zh\n",
+      "\n",
+      "pipeline:\n",
+      "# # No configuration for the NLU pipeline was provided. The following default pipeline was used to train your model.\n",
+      "# # If you'd like to customize it, uncomment and adjust the pipeline.\n",
+      "# # See https://rasa.com/docs/rasa/tuning-your-model for more information.\n",
+      "- name: JiebaTokenizer\n",
+      "- name: RegexFeaturizer\n",
+      "  # use match word boundaries for lookup table\n",
+      "  use_word_boundaries: False\n",
+      "- name: LexicalSyntacticFeaturizer\n",
+      "- name: CountVectorsFeaturizer\n",
+      "- name: CountVectorsFeaturizer\n",
+      "  analyzer: char_wb\n",
+      "  min_ngram: 1\n",
+      "  max_ngram: 4\n",
+      "- name: DIETClassifier\n",
+      "  epochs: 100\n",
+      "  # sigmoid cross entropy loss\n",
+      "  constrain_similarities: true\n",
+      "- name: RegexEntityExtractor\n",
+      "  # use match word boundaries for lookup table\n",
+      "  use_word_boundaries: False\n",
+      "  # When using the EntitySynonymMapper as part of an NLU pipeline, it will need to be placed below any entity extractors in the configuration file.\n",
+      "- name: EntitySynonymMapper\n",
+      "- name: ResponseSelector\n",
+      "  epochs: 100\n",
+      "  # sigmoid cross entropy loss\n",
+      "  constrain_similarities: true\n",
+      "- name: FallbackClassifier\n",
+      "  threshold: 0.3\n",
+      "  ambiguity_threshold: 0.1\n",
+      "\n",
+      "# Configuration for Rasa Core.\n",
+      "# https://rasa.com/docs/rasa/core/policies/\n",
+      "policies:\n",
+      "# # No configuration for policies was provided. The following default policies were used to train your model.\n",
+      "# # If you'd like to customize them, uncomment and adjust the policies.\n",
+      "# # See https://rasa.com/docs/rasa/policies for more information.\n",
+      "- name: MemoizationPolicy\n",
+      "- name: RulePolicy\n",
+      "- name: UnexpecTEDIntentPolicy\n",
+      "  max_history: 5\n",
+      "  epochs: 100\n",
+      "- name: TEDPolicy\n",
+      "  max_history: 5\n",
+      "  epochs: 100\n",
+      "  # sigmoid cross entropy loss\n",
+      "  constrain_similarities: true\n",
+      "  \n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"get local config\"\"\"\n",
+    "r_get = requests.get(url=f'{BASE_URL}/projects/test_project/lconfigs', cookies=cookies)\n",
+    "print(r_get.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'msg': 'OK'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"update local config\"\"\"\n",
+    "r_put = requests.put(url=f'{BASE_URL}/projects/test_project/lconfigs',\n",
+    "                     cookies=cookies,\n",
+    "                     data='test\\ntest2')\n",
+    "print(r_put.json())"
    ]
   },
   {
