--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
     "\"\"\"update local config\"\"\"\n",
     "r_put = requests.put(url=f'{BASE_URL}/projects/test_project/lconfigs',\n",
     "                     cookies=cookies,\n",
-    "                     data='test\\ntest2')\n",
+    "                     data='language: zh')\n",
     "print(r_put.json())"
    ]
   },
